[package]
name = "bonding-curve"
version = "0.1.0"
edition = "2021"
description = "FloppFun Bonding Curve Program"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
default = []
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
borsh = "0.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] } 