[package]
name = "bonding-curve"
version = "0.2.0"
edition = "2021"
description = "FloppFun Bonding Curve Program - Production Pump.fun Clone"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
default = []
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
borsh = "1.5.1"
solana-program = "1.18"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1.0", features = ["full"] }
